Fix password inputs on Firefox
It's more generic CSS bug. All good again.

--- a/src/css/components/logon.css
+++ b/src/css/components/logon.css
@@ -193,13 +193,17 @@ p.logonWarningOtherLines {
   padding: 30px;
 }
 
+.form-control {
+  height: auto;
+}
+
 .dogeparty input[type="password"],
 #generated {
   background: #f6f6f6;
   border: 0;
   border-radius: 4px !important;
   margin: 0;
-  padding: 25px;
+  padding: 15px;
   text-align: center;
 }
 
